--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2",
     "video.js": "^7.6.0"
   },
   "scripts": {
