--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "firebase": "^6.3.4",
     "iphone-inline-video": "^2.2.2",
     "mobile-detect": "^1.4.3",
     "node-sass": "^4.12.0",
@@ -14,6 +15,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3",
     "styled-components": "^4.3.2",
     "video.js": "^7.6.0"
   },
